feat: side nav click event in progress
side nav click event

--- a/src/app/common/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/common/side-nav-bar/side-nav-bar.component.html
@@ -68,7 +68,7 @@
           </mat-form-field>
         </div>
         <div class="row dc__countries">
-          <!-- <mat-form-field appearance="outline">
+          <mat-form-field appearance="outline">
             <select matNativeControl required [ngModel]="defaultCountry">
               <option value="australia">Australia</option>
               <option value="belgium">Belgium</option>
@@ -84,14 +84,10 @@
               <option value="united arab amirates">United Arab Emirates</option>
               <option value="united kingdom">United Kingdom</option>
             </select>
-          </mat-form-field> -->
+          </mat-form-field>
         </div>
       </div>
     </div>
   </mat-drawer>
-  <div class="example-sidenav-content">
-    <router-outlet></router-outlet>
-    <br />
-    <app-footer></app-footer>
-  </div>
+  <div class="example-sidenav-content"></div>
 </mat-drawer-container>
