feat: nav bar fix
nav bar component interaction fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,7 +90,8 @@
     </div>
   </mat-drawer>
   <div class="example-sidenav-content"> -->
-<app-header></app-header>
+
+<app-side-nav-bar></app-side-nav-bar>
 <router-outlet></router-outlet>
 <br />
 <app-footer></app-footer>
