--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,97 +1,99 @@
-<footer class="dc__footer">
+<footer class="dc-footer">
   <div class="container">
     <div class="row">
       <div class="col-12 col-sm-6 col-md-3" style="padding-top: 20px">
-        <div class="dc__card h-100">
-          <h3 class="dc__title">Discover Deliveroo</h3>
-          <ul class="dc__list">
+        <div class="dc-footer__card h-100">
+          <h3 class="dc-footer__title">Discover Deliveroo</h3>
+          <ul class="dc-footer__list">
             <li>
-              <a href="#!" class="dc__text">Investors</a>
+              <a href="#!" class="dc-footer__text">Investors</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">About us</a>
+              <a href="#!" class="dc-footer__text">About us</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">Takeaway</a>
+              <a href="#!" class="dc-footer__text">Takeaway</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">More</a>
+              <a href="#!" class="dc-footer__text">More</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">Newsroom</a>
+              <a href="#!" class="dc-footer__text">Newsroom</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">Engineering blog</a>
+              <a href="#!" class="dc-footer__text">Engineering blog</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">Design blog</a>
+              <a href="#!" class="dc-footer__text">Design blog</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">Gift Cards</a>
+              <a href="#!" class="dc-footer__text">Gift Cards</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">Careers</a>
+              <a href="#!" class="dc-footer__text">Careers</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">Restaurant signup</a>
+              <a href="#!" class="dc-footer__text">Restaurant signup</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">Become a rider</a>
+              <a href="#!" class="dc-footer__text">Become a rider</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">Deliveroo Talent Directory</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3" style="padding-top: 20px">
-        <div class="dc__card h-100">
-          <h3 class="dc__title">Legal</h3>
-          <ul class="dc__list">
-            <li>
-              <a href="#!" class="dc__text">Terms and conditions</a>
-            </li>
-            <li>
-              <a href="#!" class="dc__text">Privacy</a>
-            </li>
-            <li>
-              <a href="#!" class="dc__text">Cookies</a>
-            </li>
-            <li>
-              <a href="#!" class="dc__text">Modern Slavery Statement</a>
-            </li>
-            <li>
-              <a href="#!" class="dc__text">Tax Strategy</a>
-            </li>
-            <li>
-              <a href="#!" class="dc__text">Section 172 Statement</a>
+              <a href="#!" class="dc-footer__text"
+                >Deliveroo Talent Directory</a
+              >
             </li>
           </ul>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-3" style="padding-top: 20px">
-        <div class="dc__card h-100">
-          <h3 class="dc__title">Help</h3>
-          <ul class="dc__list">
+        <div class="dc-footer__card h-100">
+          <h3 class="dc-footer__title">Legal</h3>
+          <ul class="dc-footer__list">
             <li>
-              <a href="#!" class="dc__text">Contact</a>
+              <a href="#!" class="dc-footer__text">Terms and conditions</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">FAQs</a>
+              <a href="#!" class="dc-footer__text">Privacy</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">Cuisines</a>
+              <a href="#!" class="dc-footer__text">Cookies</a>
             </li>
             <li>
-              <a href="#!" class="dc__text">Brands</a>
+              <a href="#!" class="dc-footer__text">Modern Slavery Statement</a>
+            </li>
+            <li>
+              <a href="#!" class="dc-footer__text">Tax Strategy</a>
+            </li>
+            <li>
+              <a href="#!" class="dc-footer__text">Section 172 Statement</a>
             </li>
           </ul>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-3" style="padding-top: 20px">
-        <div class="dc__card h-100">
-          <h3 class="dc__title">Take Deliveroo with you</h3>
-          <ul class="dc__list">
+        <div class="dc-footer__card h-100">
+          <h3 class="dc-footer__title">Help</h3>
+          <ul class="dc-footer__list">
+            <li>
+              <a href="#!" class="dc-footer__text">Contact</a>
+            </li>
+            <li>
+              <a href="#!" class="dc-footer__text">FAQs</a>
+            </li>
+            <li>
+              <a href="#!" class="dc-footer__text">Cuisines</a>
+            </li>
+            <li>
+              <a href="#!" class="dc-footer__text">Brands</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3" style="padding-top: 20px">
+        <div class="dc-footer__card h-100">
+          <h3 class="dc-footer__title">Take Deliveroo with you</h3>
+          <ul class="dc-footer__list">
             <li>
               <a
                 href="https://apps.apple.com/us/app/deliveroo-food-delivery-app/id1001501844"
@@ -131,7 +133,6 @@
                 alt="facebook"
                 height="24"
                 width="24"
-                class="change-my-color"
               />
             </a>
           </li>
@@ -144,7 +145,7 @@
                 alt="twitter"
                 height="24"
                 width="24"
-                class="dc__img"
+                class="dc-footer__img"
               />
             </a>
           </li>
@@ -155,13 +156,13 @@
                 alt="instagram"
                 height="24"
                 width="24"
-                class="dc__img"
+                class="dc-footer__img"
               />
             </a>
           </li>
         </ul>
         <div class="d-flex justify-content: space-betwee">
-          <p class="dc__para">© 2023 Deliveroo</p>
+          <p class="dc-footer__para">© 2023 Deliveroo</p>
         </div>
       </div>
     </div>
