--- a/src/app/common/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/common/side-nav-bar/side-nav-bar.component.html
@@ -1,9 +1,14 @@
-<mat-drawer-container class="example-container" autosize>
+<mat-drawer-container class="dc-nav__container" autosize>
   <app-header (sidenav)="drawer.toggle()"></app-header>
-  <mat-drawer #drawer class="sidenav dc__sidebar" mode="over" position="end">
-    <div class="container dc dc__sidenav">
+  <mat-drawer
+    #drawer
+    class="sidenav dc-nav__sidebar"
+    mode="over"
+    position="end"
+  >
+    <div class="container dc-nav dc-nav__sidenav">
       <div class="row">
-        <div class="col dc__nav-icons">
+        <div class="col dc-nav__nav-icons">
           <a href="">
             <img
               src="assets\svg\deliveroo-logo.svg"
@@ -19,55 +24,55 @@
         </div>
       </div>
       <hr />
-      <div class="container dc__sidnavbtn" style="display: grid">
-        <button mat-button class="dc__signup">
-          <a class="dc__navtext" routerLink="login">Sign up or log in</a>
+      <div class="container dc-nav__sidnavbtn" style="display: grid">
+        <button mat-button class="dc-nav__signup">
+          <a class="dc-nav__navtext" routerLink="login">Sign up or log in</a>
         </button>
       </div>
       <div class="container" style="padding-bottom: 186px">
-        <a class="d-md-none dc__faqs" href=""
+        <a class="d-md-none dc-nav__faqs" href=""
           ><img
             src="assets\svg\nav-svgs\bicycle.svg"
             alt="question-mark-icon"
             height="24"
             width="24"
           />
-          <span class="dc__faqs-text"><p>Become a Rider</p></span></a
+          <span class="dc-nav__faqs-text"><p>Become a Rider</p></span></a
         >
-        <a class="d-md-none dc__faqs" href=""
+        <a class="d-md-none dc-nav__faqs" href=""
           ><img src="assets\svg\nav-svgs\eat.svg" height="24" width="24" />
-          <span class="dc__faqs-text"><p>Add your restaurant</p></span></a
+          <span class="dc-nav__faqs-text"><p>Add your restaurant</p></span></a
         >
-        <a class="d-md-none dc__faqs" href=""
+        <a class="d-md-none dc-nav__faqs" href=""
           ><img
             src="assets\svg\nav-svgs\office-building.svg"
             alt="question-mark-icon"
             height="24"
             width="24"
           />
-          <span class="d-md-none dc__faqs-text"
+          <span class="d-md-none dc-nav__faqs-text"
             ><p>Sign up your office</p></span
           ></a
         >
-        <a class="dc__faqs" href=""
+        <a class="dc-nav__faqs" href=""
           ><img
             src="assets\svg\nav-svgs\question-mark-icon.svg"
             alt="question-mark-icon"
             height="24"
             width="24"
           />
-          <span class="dc__faqs-text"><p>FAQs</p></span></a
+          <span class="dc-nav__faqs-text"><p>FAQs</p></span></a
         >
       </div>
-      <div class="container dc__lables">
+      <div class="container dc-nav__lables">
         <div class="row">
           <mat-form-field appearance="outline">
-            <select matNativeControl required class="dc__language">
+            <select matNativeControl required class="dc-nav__language">
               <option value="english">English</option>
             </select>
           </mat-form-field>
         </div>
-        <div class="row dc__countries">
+        <div class="row dc-nav__countries">
           <mat-form-field appearance="outline">
             <select matNativeControl required [ngModel]="defaultCountry">
               <option value="australia">Australia</option>
