--- a/src/app/common/side-nav-bar/side-nav-bar.component.scss
+++ b/src/app/common/side-nav-bar/side-nav-bar.component.scss
@@ -1,9 +1,8 @@
-.example-container {
-  height: 100;
-  flex-direction: column;
-}
-
-.dc {
+.dc-nav {
+  &__container {
+    height: 100;
+    flex-direction: column;
+  }
   &__signup {
     margin-top: 10px;
     background-color: #00ccbc;
