feat: email validation
email validation

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -58,8 +58,11 @@
                 ngModel
                 name="email"
                 required
-                email
+                [formControl]="email"
               />
+              <mat-error *ngIf="email.invalid">{{
+                getErrorMessage()
+              }}</mat-error>
             </mat-form-field>
           </div>
           <div class="row">
