--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -13,7 +13,9 @@
             <button
               mat-stroked-button
               class="d-none d-md-block dc-header__button"
-              type="button"
+              routerLink=""
+              [routerLinkActive]="'active'"
+              [routerLinkActiveOptions]="{ exact: true }"
             >
               <img
                 src="assets\svg\header\drop-down.svg"
