feat: active router links
active router link

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -16,6 +16,7 @@
               routerLink=""
               [routerLinkActive]="'active'"
               [routerLinkActiveOptions]="{ exact: true }"
+              *ngIf="!isLoginPage"
             >
               <img
                 src="assets\svg\header\drop-down.svg"
