feat: fix partner with us button
When navigating to another page the partner with us button should not display in other pages  is fix now

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -13,10 +13,7 @@
             <button
               mat-stroked-button
               class="d-none d-md-block dc-header__button"
-              routerLink=""
-              [routerLinkActive]="'active'"
-              [routerLinkActiveOptions]="{ exact: true }"
-              *ngIf="!isLoginPage"
+              *ngIf="isHomePage"
             >
               <img
                 src="assets\svg\header\drop-down.svg"
