--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -18,6 +18,7 @@
               email
             />
           </div>
+          <p>Password</p>
           <div class="row">
             <button
               mat-button
