feat: add mat errors

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -60,13 +60,14 @@
                 required
                 [formControl]="email"
               />
-              <mat-error *ngIf="email.invalid">{{
-                getErrorMessage()
-              }}</mat-error>
+              <mat-error *ngIf="email.invalid"
+                >This field is required</mat-error
+              >
+              <mat-error *ngIf="email.invalid">add valid email</mat-error>
             </mat-form-field>
           </div>
 
-          <div class="row">
+          <!-- <div class="row">
             <mat-form-field appearance="outline" class="dc-login__input-field">
               <input
                 matInput
@@ -80,7 +81,7 @@
                 getErrorMessage()
               }}</mat-error>
             </mat-form-field>
-          </div>
+          </div> -->
 
           <div class="row">
             <button
