--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -55,7 +55,6 @@
                 matInput
                 placeholder="e.g.name@example.com"
                 type="email"
-                [(ngModel)]="model.email"
                 name="email"
                 required
                 [formControl]="email"
@@ -68,14 +67,13 @@
               >
             </mat-form-field>
           </div>
-
+          <p>Password</p>
           <div class="row">
             <mat-form-field appearance="outline" class="dc-login__input-field">
               <input
                 matInput
                 placeholder="Enter a password"
                 type="password"
-                [(ngModel)]="model.password"
                 name="password"
                 required
                 [formControl]="password"
@@ -100,6 +98,15 @@
           <div class="row">
             <button mat-button class="dc-login dc-login__forgot">
               Forgot password
+            </button>
+          </div>
+          <div class="row">
+            <button
+              mat-button
+              class="dc-login__continue"
+              (click)="loadSigninPage()"
+            >
+              Signin
             </button>
           </div>
         </div>
