--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -47,7 +47,7 @@
     >
       <form (ngSubmit)="onSubmit(form)" #form="ngForm">
         <h1 class="dc-login__h1">Sign up or log in</h1>
-        <div class="dc-login__inputfield">
+        <div class="dc-login__inputfield" *ngIf="showEmailField">
           <p>Email address</p>
           <div class="row">
             <mat-form-field appearance="outline" class="dc-login__input-field">
@@ -67,22 +67,6 @@
               >
             </mat-form-field>
           </div>
-          <p>Password</p>
-          <div class="row">
-            <mat-form-field appearance="outline" class="dc-login__input-field">
-              <input
-                matInput
-                placeholder="Enter a password"
-                type="password"
-                name="password"
-                required
-                [formControl]="password"
-              />
-              <mat-error *ngIf="email.hasError('required')"
-                >Password field is required</mat-error
-              >
-            </mat-form-field>
-          </div>
 
           <div class="row">
             <button
@@ -90,7 +74,7 @@
               type="submit"
               class="dc-login__continue"
               [disabled]="form.invalid"
-              (click)="loginUser()"
+              (click)="onContinue()"
             >
               Continue
             </button>
@@ -107,6 +91,33 @@
               (click)="loadSigninPage()"
             >
               Signin
+            </button>
+          </div>
+        </div>
+        <div class="row" *ngIf="!showEmailField">
+          <p>Password</p>
+          <mat-form-field appearance="outline" class="dc-login__input-field">
+            <input
+              matInput
+              placeholder="Enter a password"
+              type="password"
+              name="password"
+              required
+              [formControl]="password"
+            />
+            <mat-error *ngIf="password.hasError('required')"
+              >Password field is required</mat-error
+            >
+          </mat-form-field>
+          <div class="row">
+            <button
+              mat-button
+              type="submit"
+              class="dc-login__continue"
+              [disabled]="form.invalid"
+              (click)="loginUser()"
+            >
+              Login
             </button>
           </div>
         </div>
