--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -96,19 +96,22 @@
         </div>
         <div class="row" *ngIf="!showEmailField">
           <p>Password</p>
-          <mat-form-field appearance="outline" class="dc-login__input-field">
-            <input
-              matInput
-              placeholder="Enter a password"
-              type="password"
-              name="password"
-              required
-              [formControl]="password"
-            />
-            <mat-error *ngIf="password.hasError('required')"
-              >Password field is required</mat-error
-            >
-          </mat-form-field>
+          <div class="row">
+            <mat-form-field appearance="outline" class="dc-login__input-field">
+              <input
+                matInput
+                placeholder="Enter a password"
+                type="password"
+                name="password"
+                required
+                [formControl]="password"
+              />
+              <mat-error *ngIf="password.hasError('required')"
+                >Password field is required</mat-error
+              >
+            </mat-form-field>
+          </div>
+
           <div class="row">
             <button
               mat-button
