--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -37,6 +37,7 @@
               <button mat-menu-item>
                 <img
                   src="assets\svg\header\dropdown\restaurant.svg"
+                  alt="restaurant"
                   height="24"
                   width="24"
                 />
