--- a/src/app/pages/menu-page/menu-page.component.html
+++ b/src/app/pages/menu-page/menu-page.component.html
@@ -1,1 +1,37 @@
-<p>menu-page works!</p>
+<div class="dc-menu">
+  <div class="container">
+    <div class="row">
+      <div class="d-flex col-4">
+        <img src="assets\images\card-chef.jpg" alt="menu" style="width: 100%" />
+      </div>
+      <div class="d-flex col-8">
+        <div class="row">
+          <h1 class="dc-menu__heading">A-One Signature - Chinatown Point</h1>
+          <div>
+            <span>Chinese </span>
+            <span>·Noodles </span>
+            <span>·Singaporean</span>
+          </div>
+          <div>
+            <span class="col">Opens at 10:30 </span>
+            <span class="col">·$12.00 minimum</span>
+            <span class="col"> ·$3.00 delivery</span>
+          </div>
+          <div>
+            <a href="">
+              <div>
+                <div>svg</div>
+                <div>
+                  <div>Info</div>
+                  <div>Allergens and more</div>
+                </div>
+                <div>svg</div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div></div>
+</div>
