--- a/src/app/pages/menu-page/menu-page.component.html
+++ b/src/app/pages/menu-page/menu-page.component.html
@@ -1,10 +1,19 @@
 <div class="dc-menu">
   <div class="container">
     <div class="row">
+      <a href="" class="dc-menu__back"
+        ><img
+          src="assets\images\menu-page\arrow-back.svg"
+          alt="arrow"
+          class="dc-menu__arrow-back"
+        />Back</a
+      >
+    </div>
+    <div class="row">
       <div class="d-flex col-4">
         <img src="assets\images\card-chef.jpg" alt="menu" style="width: 100%" />
       </div>
-      <div class="d-flex col-8">
+      <div class="d-flex col-5">
         <div class="row">
           <h1 class="dc-menu__heading">A-One Signature - Chinatown Point</h1>
           <div>
@@ -18,20 +27,71 @@
             <span class="col"> ·$3.00 delivery</span>
           </div>
           <div>
-            <a href="">
+            <button class="dc-menu__info-button">
               <div>
-                <div>svg</div>
-                <div>
-                  <div>Info</div>
-                  <div>Allergens and more</div>
+                <div class="d-flex">
+                  <img
+                    src="assets\images\menu-page\information.svg"
+                    alt="information-svg"
+                    class="dc-menu__info-img"
+                  />
+                  <div>
+                    <span class="dc-menu__text1">Info</span>
+                    <span class="dc-menu__text2">Allergens and more</span>
+                  </div>
+                  <img
+                    src="assets\images\menu-page\arrow-next.svg"
+                    alt="arrow"
+                    class="dc-menu__next-icon"
+                  />
                 </div>
-                <div>svg</div>
               </div>
-            </a>
+            </button>
           </div>
+          <div>
+            <button class="dc-menu__review-button">
+              <div>
+                <div class="d-flex">
+                  <img
+                    src="assets\images\menu-page\star.svg"
+                    alt="information-svg"
+                    class="dc-menu__info-img"
+                  />
+                  <div>
+                    <span class="dc-menu__text1">4.3 Very good</span>
+                    <span class="dc-menu__text2">See all 500 reviews</span>
+                  </div>
+                  <img
+                    src="assets\images\menu-page\arrow-next.svg"
+                    alt="arrow"
+                    class="dc-menu__next-icon"
+                  />
+                </div>
+              </div>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex col-3">
+        <div class="row d-flex">
+          <a href="" class="dc-menu__deliver">
+            <img
+              src="assets\images\menu-page\fast-food-delivery.svg"
+              alt="delivery-icon"
+              class="dc-menu__deliver-icon"
+            />
+            <span class="dc-menu__location-text">No location selected</span>
+            <span class="dc-menu__change-text">Change</span>
+          </a>
+          <button mat-stroked-button class="dc-menu__group-order-btn">
+            <img
+              src="assets\images\menu-page\group.svg"
+              alt="group-svg"
+              class="dc-menu__group-img"
+            />Start group order
+          </button>
         </div>
       </div>
     </div>
   </div>
-  <div></div>
 </div>
