--- a/src/app/pages/menu-page/menu-page.component.html
+++ b/src/app/pages/menu-page/menu-page.component.html
@@ -95,3 +95,9 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-8"><app-restaurant-menu></app-restaurant-menu></div>
+    <div class="col-4"><app-basket></app-basket></div>
+  </div>
+</div>
